<resources>
    <string name="app_name">Atomilion</string>

    <string name="count_label">Pytanie %d</string>
    <string name="question_label">Question</string>
    <string name="btn_answer">choice</string>

    <string name="result_title">Twój wynik</string>
    <string name="result_score">%d</string>
    <string name="btn_try_again">Spróbuj ponownie</string>
    <string name="back_to_menu">Powrót do menu</string>
</resources>