<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/tlo_pytan">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_score"
        android:textSize="35sp"
        android:layout_marginTop="60dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/tryAgainBtn"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/btn_try_again" />

    <Button
        android:id="@+id/backToMenu"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/back_to_menu" />

</LinearLayout>