<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlo_pytan"
    android:padding="24dp"
    tools:context=".MainActivity"
    tools:ignore="UsingOnClickInXml">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/count_label"
        android:text="@string/count_label"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/questionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/choices_layout"
        android:layout_marginTop="30dp"
        android:text="@string/question_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choices_layout"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerBtn1"
            android:layout_marginTop="80dp"
            android:background="@color/white"
            android:text="@string/btn_answer"
            android:textColor="@color/white"
            android:onClick="checkAnswer"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerBtn2"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:text="@string/btn_answer"
            android:textColor="@color/white"
            android:onClick="checkAnswer"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerBtn3"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:text="@string/btn_answer"
            android:textColor="@color/white"
            android:onClick="checkAnswer"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answerBtn4"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:text="@string/btn_answer"
            android:textColor="@color/white"
            android:onClick="checkAnswer"/>

    </LinearLayout>

</RelativeLayout>